# AgriBackend

./: README.md  ai4agri.code-workspace  pyproject.toml
functions/: configure_connections.ps1  init.ps1
modules/: main.py
modules/flies/app/routes/: flies.py
modules/flies/domain/: flies.py
modules/flies/infra/ai/: detection.py
modules/flies/infra/db/migration/: alembic.ini
scripts/: init.ps1
src/: __main__.py  main.py  req.txt
src/modules/base/app/: management.py
src/modules/base/domain/: greenhouse.py  sector.py
src/modules/base/domain/ports/: greenhouse_repository.py  sector_repository.py
src/modules/base/infra/db/adapter/: greenhouse_repository.py  sector_repository.py
src/modules/base/infra/db/migration/: alembic.ini
src/modules/base/infra/db/model/: greenhouse_model.py  sector_model.py
src/modules/detection/app/: color.py  flies.py  response.py
src/modules/detection/app/services/: color_service.py  fly_service.py
src/modules/detection/domain/model/: color.py  colour.py  flies.py
src/modules/detection/domain/ports/: color_model.py  color_service.py  fly_model.py  fly_service.py  repository.py
src/modules/detection/infra/ai/: detection.py
src/modules/detection/infra/db/adapter/: repository.py  uow.py
src/modules/detection/infra/db/migration/: alembic.ini
src/modules/detection/infra/db/model/: flies_model.py
src/modules/detection/utils/: detection_const.py
src/seedwork/domain/: ai_port.py  repository.py
src/seedwork/infra/: model_mapper.py  uow.py
src/seedwork/utils/: generic_response.py
tests/fly/: test_flies_model.py
(+3 files in other folders)
