[tool.poetry]
name = "ai4agri"
version = "0.1.0"
description = "This is the project developed by aivisiontech agri team"
authors = ["ShogunSkinoski","seydabsnl"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.1"
fastapi = "^0.109.0"
mysql-connector-python = "^8.3.0"
sqlalchemy = "^2.0.25"
torch = "^2.2.0"
ultralytics = "^8.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
